javali_tests/HW1/ReadWrite.javali.err
Debug information for file: javali_tests/HW1/ReadWrite.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: i0, type: int)
| | | VarDecl (name: i1, type: int)
| | | VarDecl (name: i2, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: i1)
| | | | BuiltInRead ()
| | | BuiltInWrite ()
| | | | Var (name: i1)

Phase exec failed because we expected to see:
22
But we actually saw:
<<<<<<< HEAD
<<<<<<< HEAD
=======
Error: 139
>>>>>>> 9b3c496f200e995a3532e41126c3c6b385cfc65a

The difference is:
At line   1 /   1:
< 22
<<<<<<< HEAD
=======
> Error: 139
>>>>>>> 9b3c496f200e995a3532e41126c3c6b385cfc65a

